Create seperate command library